# auto-gen-playlist

./: .env-sample  .gitignore  README.md  main.py  poetry.toml  pyproject.toml
auto_gen_playlist/: core.py  lastfm.py  playlist.py  spotify.py  top_track.py  variables.py
auto_gen_playlist/config/: config_sample.json
auto_gen_playlist/lastfm/: __init__.py  api.py  core.py  misc.py  requests.py
auto_gen_playlist/spotify/: __init__.py  api.py  core.py  ft.py  playlist.py  search.py  sort.py  utils.py
auto_gen_playlist/utils/: tracks.py
etc/: log-conf.yaml
lastfm-utils/: fetch.py  playlist.py  variant.py
lastfm-utils/utils/: misc.py
