[tool.poetry]
name = "auto-gen-playlist"
version = "0.1.0"
description = ""
authors = ["derorsche <90059514+derorsche@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiohttp = {extras = ["speedups"], version = "^3.8.0"}
PyYAML = "^6.0"
python-dotenv = "^0.21.0"
spotipy = "^2.20.0"
scipy = "^1.9.1"

[tool.poetry.group.dev.dependencies]
notebook = "^6.4.12"
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
